feature(cadastro): nova funcionalidade de armazanamento local

--- a/src/pages/login-estoque/login-estoque.css
+++ b/src/pages/login-estoque/login-estoque.css
@@ -1,26 +1,32 @@
 body {
-    background-image: url('https://digital.intermodal.com.br/sites/intermodal.com/files/styles/article_featured_standard/public/Inteligncia%20Artificial%20na%20otimizao%20da%20gesto%20de%20estoque.jpeg?itok=ckTzhAmz');
+    background-image: url(/src/pages/login-estoque/Imagens/low-poly-grid-haikei\ \(1\).svg);
     background-size: cover;
     font-family: Arial, sans-serif;
 }
 
-h1 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 48px;
-    color: white;
+.login-form h1 {
     text-align: center;
-    margin-top: 100px;
-    text-shadow: 2px 2px 4px #000000;
+    color: #bcdbdf;
+}
+
+.login-form p a {
+    color: #bcdbdf;
+}
+
+.login-form p a:hover {
+    color: #32afbb;
 }
 
 .login-form{
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: #524e4e91;
     padding: 20px;
     max-width: 400px;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 100px;
     border-radius: 10px;
+    color: #bcdbdf;
 }
+
 .input {
     width: 100%;
     padding: 10px;
@@ -30,21 +36,29 @@ h1 {
     border: none;
     border-bottom: 2px solid #ccc;
     font-size: 16px;
+    background-color: #ccc;
 }
+
 .button-login {
-    background-color: #4682B4;
+    background-color: #232424a2;
     color: white;
-    padding: 10px 178px;
+    padding: 10px 165px;
     margin: 10px 0;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
 }
+
+.button-login:hover {
+    background-color: #2d3035a2;
+}
+
 .button-cadastrar
     :hover {
     background-color: #45a049;
 }
+
 .link {
     display: block;
     text-align: center;
