--- a/src/pages/cadastro-estoque/cadastro-estoque.css
+++ b/src/pages/cadastro-estoque/cadastro-estoque.css
@@ -31,6 +31,7 @@
 			border: none;
 			border-bottom: 2px solid #ccc;
 			font-size: 16px;
+			outline: none;
 		}
 		.button-cadastrar {
 			background-color: #4682B4;
