Atualiza caminho dos links

--- a/src/pages/cadastro-estoque/cadastro-estoque.css
+++ b/src/pages/cadastro-estoque/cadastro-estoque.css
@@ -1,6 +1,6 @@
 
 		body {
-			background-image: url(/src/pages/cadastro-estoque/Imagens/low-poly-grid-haikei\ \(1\).svg);
+			background-image: url(../cadastro-estoque/Imagens/low-poly-grid-haikei\ \(1\).svg);
 			background-size: cover;
 			font-family: Arial, sans-serif;
 		}	
