--- a/src/pages/login-estoque/login-estoque.css
+++ b/src/pages/login-estoque/login-estoque.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/src/pages/login-estoque/Imagens/low-poly-grid-haikei\ \(1\).svg);
+    background-image: url(../login-estoque/Imagens/low-poly-grid-haikei\ \(1\).svg);
     background-size: cover;
     font-family: Arial, sans-serif;
 }
