feature(cadastro): inclui funcionalidades de registro de compra e venda

--- a/src/pages/saidaProdutos-estoque/saida-produtos.css
+++ b/src/pages/saidaProdutos-estoque/saida-produtos.css
@@ -3,14 +3,21 @@
     padding: 0;
 }
 
+textarea:focus,
+input:focus, 
+select:focus {
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+} 
+
 body {
-    background-image: url(./Imagens/SL_043021_42650_23.jpg);
+    background-image: url(./Imagens/sl_043021_42650_09.jpg);
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .form-title {
-    color: rgba(32, 178, 171, 0.836);
+    color: rgba(233, 33, 33, 0.836);
     text-align: center;
     margin-top: 75px;
 }
@@ -27,7 +34,8 @@ body {
     padding-top: 15px;
 }
 
-.input {
+.input,
+#tipo {
     background-color: rgba(255, 255, 255, 0.871);
     border-radius: 5px;
     padding: 5px;
@@ -48,19 +56,19 @@ body {
     margin-top: 10px;
     padding: 10px;
     border-radius: 5px;
-    background-color: rgba(32, 178, 171, 0.836);
+    background-color: rgba(233, 33, 33, 0.836);
     cursor: pointer;
     color: white;
     border: none;
 }
 
 .button-registrar:hover {
-    background-color: rgb(32, 178, 171);
+    background-color: rgba(216, 47, 47, 0.84);
 }
 
 .pagina-inicial {
     text-decoration: none;
-    background-color: rgb(32, 178, 171);
+    background-color: rgba(233, 33, 33, 0.836);
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -72,5 +80,5 @@ body {
 }
 
 .pagina-inicial:hover {
-    background-color: rgba(32, 178, 171, 0.836);
+    background-color: rgba(216, 47, 47, 0.84);
 }
