--- a/src/pages/saidaProdutos-estoque/saida-produtos.css
+++ b/src/pages/saidaProdutos-estoque/saida-produtos.css
@@ -35,7 +35,7 @@ body {
 }
 
 .input,
-#tipo {
+select {
     background-color: rgba(255, 255, 255, 0.871);
     border-radius: 5px;
     padding: 5px;
