--- a/src/pages/cadastroProdutos-estoque/cadastroProdutos.css
+++ b/src/pages/cadastroProdutos-estoque/cadastroProdutos.css
@@ -66,7 +66,13 @@ body {
     background-color: rgba(216, 47, 47, 0.84);
 }
 
-.pagina-inicial {
+.nav {
+    display: flex;
+    justify-content: end;
+}
+.pagina-inicial,
+.entrada-produtos,
+.saida-produtos {
     text-decoration: none;
     background-color: rgba(233, 33, 33, 0.836);
     padding: 10px;
@@ -77,8 +83,11 @@ body {
     letter-spacing: 2px;
     display: inline-block;
     margin: 10px 10px;
+    text-align: center;
 }
 
-.pagina-inicial:hover {
-    background-color: rgba(216, 47, 47, 0.84);
+.pagina-inicial:hover, 
+.entrada-produtos:hover,
+.saida-produtos:hover {
+    background-color: rgba(201, 11, 11, 0.84);
 }
