--- a/src/pages/entradaProdutos-estoque/entrada-produtos.css
+++ b/src/pages/entradaProdutos-estoque/entrada-produtos.css
@@ -66,7 +66,14 @@ select {
     background-color: rgb(32, 178, 171);
 }
 
-.pagina-inicial {
+.nav {
+    display: flex;
+    justify-content: end;
+}
+
+.pagina-inicial,
+.cadastro-produtos,
+.saida-produtos {
     text-decoration: none;
     background-color: rgb(32, 178, 171);
     padding: 10px;
@@ -79,6 +86,8 @@ select {
     margin: 10px 10px;
 }
 
-.pagina-inicial:hover {
+.pagina-inicial:hover,
+.cadastro-produtos:hover,
+.saida-produtos:hover {
     background-color: rgba(32, 178, 171, 0.836);
 }
